[tool.poetry]
name = "hamming-ai"
version = "0.1.0"
description = "take-home assignment"
authors = ["TimC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
assemblyai = "^0.35.1"
pydantic-settings = "^2.7.0"
aiofiles = "^24.1.0"
anthropic = "^0.42.0"
aiohttp = "^3.11.10"
loguru = "^0.7.3"
networkx = "^3.4.2"
graphviz = "^0.20.3"
pre-commit = "^4.0.1"
dash = "^2.18.2"
dash-cytoscape = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
